Remplacement d'un élément obsolète.